Quad update