@@ -1,8 +1,9 @@
 package com.zephyros1938.engine;
 
+import java.io.FileInputStream;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public class Utils {
     private Utils() {
@@ -11,7 +12,9 @@ public class Utils {
     public static String readFile(String file_path) {
         String str;
         try {
-            str = new String(Files.readAllBytes(Paths.get(file_path)));
+            FileInputStream fs = new FileInputStream("gltest/" + file_path);
+            str = new String(fs.readAllBytes());
+            fs.close();
         } catch (IOException excp) {
             throw new RuntimeException("Error reading file [" + file_path + "]", excp);
         }
